force-app/main/default/objects/Freight__c/Freight__c.object-meta.xml
<CustomObject>
    <label>Frete</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fretes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>