force-app/main/default/objects/Freight__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data de Fim</label>
    <type>Date</type>
</CustomField>