force-app/main/default/objects/Freight__c/fields/EndVolumn__c.field-meta.xml
<CustomField>
    <fullName>EndVolumn__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Volume Final</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>