force-app/main/default/objects/Freight__c/fields/Fabrica__c.field-meta.xml
<CustomField>
    <fullName>Fabrica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fabrica</label>
    <referenceTo>Fabrica__c</referenceTo>
    <relationshipLabel>Fretes</relationshipLabel>
    <relationshipName>Fretes</relationshipName>
    <type>Lookup</type>
</CustomField>