force-app/main/default/objects/Freight__c/fields/FabricaName__c.field-meta.xml
<CustomField>
    <fullName>FabricaName__c</fullName>
    <formula>Fabrica__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Fabrica</label>
    <type>Text</type>
</CustomField>