force-app/main/default/objects/Freight__c/fields/InitialVolumn__c.field-meta.xml
<CustomField>
    <fullName>InitialVolumn__c</fullName>
    <label>Volume Inicial</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>