force-app/main/default/objects/Freight__c/fields/MinimumWeight__c.field-meta.xml
<CustomField>
    <fullName>MinimumWeight__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Peso Minimo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>