force-app/main/default/objects/Freight__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fretes</relationshipLabel>
    <relationshipName>Fretes</relationshipName>
    <type>Lookup</type>
</CustomField>