force-app/main/default/objects/Freight__c/fields/ValorFrete__c.field-meta.xml
<CustomField>
    <fullName>ValorFrete__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor de Frete</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>