force-app/main/default/objects/Freight__c/fields/Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo__c</fullName>
    <label>Tipo de veiculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Caminhão</fullName>
            </value>
            <value>
                <fullName>Fiorinio</fullName>
            </value>
            <value>
                <fullName>Caminhão Pequeno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>