force-app/main/default/objects/Freight__c/fields/Volumns__c.field-meta.xml
<CustomField>
    <fullName>Volumns__c</fullName>
    <formula>TEXT(InitialVolumn__c) +&apos; - &apos;+TEXT(EndVolumn__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faixa de Volume</label>
    <type>Text</type>
</CustomField>