force-app/main/default/objects/Freight__c/recordTypes/OutBoundFreight.recordType-meta.xml
<RecordType>
    <fullName>OutBoundFreight</fullName>
    <active>true</active>
    <label>Frete Saída</label>
</RecordType>