force-app/main/default/objects/Freight__c/recordTypes/TransferFreight.recordType-meta.xml
<RecordType>
    <fullName>TransferFreight</fullName>
    <active>true</active>
    <label>Frete Transferencia</label>
</RecordType>